--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,18 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+jobs:
+  plan:
+    docker:
+      - image: public.ecr.aws/hashicorp/terraform:latest
+    steps:
+      - checkout
+      - run:
+          name: terraform init
+          command: |
+            export $AWS_ACCESS_KEY_ID
+            export $AWS_DEFAULT_REGION
+            export $AWS_SECRET_ACCESS_KEY
+            terraform init tf/
+            terraform plan tf/
+
+
+
