--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
             export $AWS_SECRET_ACCESS_KEY
             terraform init tf/
             terraform plan tf/
-
+workflows:
+  plan:
+    jobs:
+      - plan
 
 
