--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
       - run:
           name: terraform init
           command: |
-            export $AWS_ACCESS_KEY_ID
-            export $AWS_DEFAULT_REGION
-            export $AWS_SECRET_ACCESS_KEY
+            export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+            export AWS_DEFAULT_REGION=$AWS_ACCESS_KEY_ID
+            export AWS_SECRET_ACCESS_KEY=$AWS_ACCESS_KEY_ID
             terraform init tf/
             terraform plan tf/
 workflows:
