--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
           name: terraform init
           command: |
             export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
-            export AWS_DEFAULT_REGION=$AWS_ACCESS_KEY_ID
-            export AWS_SECRET_ACCESS_KEY=$AWS_ACCESS_KEY_ID
+            export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
+            export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
             terraform init tf/
             terraform plan tf/
 workflows:
