--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
       - run:
           name: terraform init
           command: |
-            export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID && \
-            export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION && \
-            export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY && \
-            terraform init tf/ && \
+            export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_VALUE
+            export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION_VALUE
+            export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_VALUE
+            terraform init tf/
             terraform plan tf/
 workflows:
   plan:
