--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,15 @@ jobs:
   plan:
     docker:
       - image: public.ecr.aws/hashicorp/terraform:latest
+        environment:
+          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID_VALUE
+          AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION_VALUE
+          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY_VALUE
     steps:
       - checkout
       - run:
           name: terraform init
           command: |
-            export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_VALUE
-            export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION_VALUE
-            export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_VALUE
             terraform init tf/
             terraform plan tf/
 workflows:
