--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ jobs:
     docker:
       - image: public.ecr.aws/hashicorp/terraform:latest
         environment:
-          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID_VALUE
-          AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION_VALUE
-          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY_VALUE
+          AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID_VALUE}
+          AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION_VALUE}
+          AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY_VALUE}
     steps:
       - checkout
       - run:
