--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,48 @@
-version: 2.1
+version: 2
+
 jobs:
   plan:
+    working_directory: /tmp/project
     docker:
-      - image: public.ecr.aws/hashicorp/terraform:latest
-        environment:
-          AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID_VALUE}
-          AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION_VALUE}
-          AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY_VALUE}
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
     steps:
       - checkout
       - run:
-          name: terraform init
+          name: terraform init & plan
           command: |
-            export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_VALUE}
-            export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}
-            export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_VALUE}
-            terraform init tf/
-            terraform plan tf/
+            terraform init
+            terraform plan
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
 workflows:
   plan:
     jobs:
       - plan
+
+# version: 2.1
+# jobs:
+#   plan:
+#     docker:
+#       - image: public.ecr.aws/hashicorp/terraform:latest
+#         environment:
+#           AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID_VALUE}
+#           AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION_VALUE}
+#           AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY_VALUE}
+#     steps:
+#       - checkout
+#       - run:
+#           name: terraform init
+#           command: |
+#             export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_VALUE}
+#             export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}
+#             export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_VALUE}
+#             terraform init tf/
+#             terraform plan tf/
+# workflows:
+#   plan:
+#     jobs:
+#       - plan
 
 
