--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,24 @@
 version: 2.1
-
 jobs:
   plan:
-    working_directory: /tmp/project
     docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+      - image: public.ecr.aws/hashicorp/terraform:latest
+    working_directory: .
+    environment:
+      BASH_ENV: /root/.bashrc
     steps:
       - checkout
       - run:
-          name: terraform init & plan
+          name: terraform init
           command: |
+            touch $BASH_ENV            
+            echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
+            echo 'export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}' >> $BASH_ENV
+            echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
+            source $BASH_ENV
             terraform init tf/
             terraform plan tf/
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
 workflows:
   plan:
     jobs:
       - plan
-
-# version: 2.1
-# jobs:
-#   plan:
-#     docker:
-#       - image: public.ecr.aws/hashicorp/terraform:latest
-#         environment:
-#           AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID_VALUE}
-#           AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION_VALUE}
-#           AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY_VALUE}
-#     steps:
-#       - checkout
-#       - run:
-#           name: terraform init
-#           command: |
-#             export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_VALUE}
-#             export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}
-#             export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_VALUE}
-#             terraform init tf/
-#             terraform plan tf/
-# workflows:
-#   plan:
-#     jobs:
-#       - plan
-
-
