--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: terraform init
+          name: terraform init and plan
           command: |
             touch $BASH_ENV            
             echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
@@ -18,7 +18,31 @@ jobs:
             source $BASH_ENV
             terraform init tf/
             terraform plan tf/
+  apply:
+    docker:
+      - image: public.ecr.aws/hashicorp/terraform:latest
+    working_directory: ~/project
+    environment:
+      BASH_ENV: /root/.bashrc
+    steps:
+      - checkout
+      - run:
+          name: terraform init and plan
+          command: |
+            touch $BASH_ENV            
+            echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
+            echo 'export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}' >> $BASH_ENV
+            echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
+            source $BASH_ENV
+            terraform init -lock=false tf/
+            terraform apply -auto-approve tf/
+
 workflows:
   plan:
     jobs:
       - plan
+      - apply
+      - hold:
+          type: approval
+          requires:
+            - plan
