add step to approval terraform

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,5 +44,7 @@ workflows:
       - hold:
           type: approval
           requires:
-            - plan
-      - apply
+            - plan        
+      - apply:
+          requires:
+            - hold
