add step to approval terraform

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ workflows:
   plan:
     jobs:
       - plan      
-      - hold:
+      - approve_apply:
           type: approval
           requires:
             - plan        
