--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,26 @@ jobs:
             source $BASH_ENV
             terraform init -lock=false tf/
             terraform apply -auto-approve tf/
+  
+  build_container:
+    docker:
+      - image: amazon/aws-cli:latest
+    working_directory: ~/project
+    environment:
+      BASH_ENV: /root/.bashrc
+    steps:
+      - checkout
+      - run:
+          name: build image from Dockerfile
+          command: |
+            touch $BASH_ENV            
+            echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
+            echo 'export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}' >> $BASH_ENV
+            echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
+            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 986052115073.dkr.ecr.us-east-2.amazonaws.com
+            docker build -t app-jm .
+            docker tag app-jm:latest 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
+            docker push 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
 
 workflows:
   plan:
@@ -48,3 +68,6 @@ workflows:
       - apply:
           requires:
             - approve_apply
+      - build_container:
+          requires:
+            - apply
