--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,16 +38,13 @@ jobs:
             terraform apply -auto-approve tf/
   
   build_container:
-    docker:
-      - image: amazon/aws-cli:latest
+    machine:
+      image: ubuntu-2004:202010-01
     working_directory: ~/project
     environment:
       BASH_ENV: /root/.bashrc
     steps:
-      - checkout
-      - setup_remote_docker:
-          version: 19.03.13
-          docker_layer_caching: false
+      - checkout      
       - run:
           name: build image from Dockerfile
           command: |
@@ -55,10 +52,7 @@ jobs:
             echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
             echo 'export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}' >> $BASH_ENV
             echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
-            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 986052115073.dkr.ecr.us-east-2.amazonaws.com
-            docker build -t app-jm .
-            docker tag app-jm:latest 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
-            docker push 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
+            sudo apt-get update -y && sudo apt-get install curl unzip -y            
 
 workflows:
   plan:
