--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,12 +42,12 @@ jobs:
       image: ubuntu-2004:202010-01
     working_directory: ~/project
     environment:
-      BASH_ENV: /root/.bashrc
+      BASH_ENV: ~/.bashrc
     steps:
       - checkout      
       - run:
           name: build image from Dockerfile
-          command: |                        
+          command: |
             sudo echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
             sudo echo 'export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}' >> $BASH_ENV
             sudo echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
