--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,4 @@
-version: 2.1
-orbs:
-  aws-ecr: circleci/aws-ecr@7.0.0
-workflows:
-  plan:
-    jobs:
-      - plan      
-      - approve_apply:
-          type: approval
-          requires:
-            - plan        
-      - apply:
-          requires:
-            - approve_apply
-      - aws-ecr/build-and-push-image:
-          requires:
-            - apply
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_ACCESS_KEY_ID         
-          create-repo: true
-          dockerfile: Dockerfile
-          no-output-timeout: 20m
-          path: .
-          region: AWS_DEFAULT_REGION_VALUE
-          repo: jm-app
-          skip-when-tags-exist: false
-          tag: 'latest'
+version: 2.1      
 jobs:
   plan:
     docker:
@@ -63,4 +35,32 @@ jobs:
             echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
             source $BASH_ENV
             terraform init -lock=false tf/
-            terraform apply -auto-approve tf/      
+            terraform apply -auto-approve tf/
+  
+  build_image_docker:
+    docker:
+      - image: ubuntu:latest
+    steps:
+      - checkout          
+      - setup_remote_docker:
+          version: 19.03.13
+          docker_layer_caching: false
+      - run: |
+          docker build -t app-jm .
+          docker tag app-jm:latest 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
+          apt-get update && apt-get install curl unzip    
+
+workflows:
+  plan:
+    jobs:
+      - plan      
+      - approve_apply:
+          type: approval
+          requires:
+            - plan        
+      - apply:
+          requires:
+            - approve_apply
+      - build_image_docker:
+          requires:
+            - apply
