--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,15 @@ jobs:
           version: 19.03.13
           docker_layer_caching: false
       - run: |
+          apt-get update -y && apt-get install curl unzip -y
+          apt-get install apt-transport-https ca-certificates curl gnupg lsb-release -y
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+          apt-get update -y
+          apt-get install docker-ce-cli -y
           docker build -t app-jm .
           docker tag app-jm:latest 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
-          apt-get update && apt-get install curl unzip    
+              
 
 workflows:
   plan:
