--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: app-jm
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: app-jm
@@ -20,11 +20,11 @@ spec:
         image: 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "128Mi"
+            cpu: "250m"
           limits:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "128Mi"
+            cpu: "250m"
         ports:
         - containerPort: 3000
         imagePullPolicy: Always
