add ingress type nginx

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,17 +1,18 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: app-jm
   name: ingress-app-jm
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - path: /
+            pathType: Prefix
             backend:
-              serviceName: service-app-jm
-              servicePort: 80
+              service:
+                name: service-app-jm
+                port: 
+                  number: 80
