--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,40 @@ jobs:
           aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 986052115073.dkr.ecr.us-east-2.amazonaws.com
           docker build -t app-jm .
           docker tag app-jm:latest 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
-          docker push 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest                    
+          docker push 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
+  
+  app_deploy:
+    docker:
+      - image: ubuntu:latest
+    working_directory:  ~/project
+    environment:
+      BASH_ENV: /root/.bashrc
+    steps:
+      - checkout
+      - run:
+          name: terraform init and plan
+          command: |
+            apt-get update -y && apt-get install curl unzip -y
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
+            aws --version
+            touch $BASH_ENV            
+            echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}' >> $BASH_ENV
+            echo 'export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION_VALUE}' >> $BASH_ENV
+            echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}' >> $BASH_ENV
+
+            aws eks --region us-east-2 update-kubeconfig --name eks-jm
+            
+            echo 'RESOURCES=("namespace.yaml" "deployment.yaml" "service.yaml" 
+            "nginx_ingress_deployment.yaml" "ingress.yaml")' >> $BASH_ENV
+
+            source $BASH_ENV
+            
+            for RESOURCE in ${RESOURCES[@]}
+            do
+              kubectl apply -f k8s/$RESOURCE
+            done
 
 workflows:
   plan:
@@ -108,3 +141,10 @@ workflows:
       - build_and_push_image_docker:
           requires:
             - approve_test
+      - approve_deploy:
+          type: approval
+          requires:
+            - build_and_push_image_docker
+      - app_deploy:
+          requires:
+            - approve_deploy
