add step to deployment resources and app

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,12 @@ jobs:
           name: terraform init and plan
           command: |
             apt-get update -y && apt-get install curl unzip -y
+            apt-get install -y apt-transport-https ca-certificates
+            curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
+            echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
+            apt-get update
+            apt-get install -y kubectl
+            kubectl version
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
